# ptouch-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  media_type.rs  nom_utils.rs  printer_stats.rs  status_type.rs  tape_color.rs  tape_stats.rs  text_color.rs
src/command/: d460bt.rs  finalize.rs  info.rs  mod.rs  packbits.rs  precut.rs  raster_start.rs  rasterline.rs  status.rs
