[package]
authors = ["callym"]
description = "Print images on Brother P-Touch label makers"
edition = "2024"
license = " GPL-3.0-only"
name = "ptouch-rs"
repository = "https://github.com/callym/ptouch-rs"
version = "0.2.0"

[dependencies]
bitvec = "1.0.1"
enumflags2 = "0.7.12"
image = "0.25.6"
nom = "8.0.0"
nusb = "0.1.14"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1.0"

[features]
serde = ["dep:serde", "enumflags2/serde"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
